some javascript to change the name and adding bower

--- a/TheWorld/wwwroot/index.html
+++ b/TheWorld/wwwroot/index.html
@@ -10,7 +10,7 @@
 <body>
 <div id="sidebar">
     <img src="img/logo.png" alt="logo" class="headshot"/>
-    <span>Dude Solutions</span>
+    <span id="username">Dude Solutions</span>
     <ul class="menu">
         <li class="active"><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
@@ -40,5 +40,8 @@
         &copy; 2015 The World Ltd.
     </div>
 </div>
+    
+<script type="text/javascript" src="js/site.js"></script>
+
 </body>
 </html>
